--- a/css/main.css
+++ b/css/main.css
@@ -196,7 +196,7 @@
   content: "";
   -webkit-transition: all 0.35s ease;
   transition: all 0.35s ease;
-  background-color: #9b59b6;
+  background-color: #b83e11;
   width: 0;
 }
 
@@ -222,16 +222,11 @@
   width: 100%;
 }
 
-/* Demo purposes only */
-body {
-  background-color: #212121;
-}
-
 .swiper-carousel-servicios {
   position: absolute;
   z-index: 50;
   bottom: 10%;
-  left: 200%;
+  left: 300%;
   width: 90vw;
   height: 400px;
 }
@@ -299,31 +294,16 @@ main {
   z-index: 1;
 }
 
-#section-2 {
-  z-index: 81;
+#section-1 {
+  z-index: 82;
   background-color: #013452;
   background-image: linear-gradient(to right, #013452, #025382);
   top: 0px;
   left: 0px;
 }
 
-/* 
 #section-2 {
   z-index: 81;
-  background-color: $glb-brand-color01;
-  background-image: linear-gradient(to right, $glb-brand-color01, $glb-brand-color01-deg);
-  //background: url("../img/multimedia.jpg");
-  background: $glb-color-overlay-brand-1 url("../img/multimedia.jpg");
-  background-blend-mode: overlay;
-  background-size: cover;
-  top: 0px;
-  left: 0px;
-  background-repeat: no-repeat;
-  background-position: center center;
-}
- */
-#section-1 {
-  z-index: 82;
   background-color: #013452;
   background-image: linear-gradient(to right, #013452, #025382);
   top: 0px;
@@ -360,7 +340,7 @@ main {
 #section-nav {
   position: absolute;
   z-index: 88;
-  background-color: rgba(255, 255, 255, 0.3);
+  background-color: rgba(255, 255, 255, 0.5);
   color: black;
   top: -60px;
   left: 0px;
@@ -380,7 +360,7 @@ main {
   justify-content: center;
   align-items: center;
   color: transparent;
-  border: 0px solid #b83e11;
+  border: 0px solid #fff;
 }
 
 .txt-servicios {
