--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -49,32 +49,16 @@ main {
   z-index: 1;
 }
 
-#section-2 {
-  z-index: 81;
-  background-color: $glb-brand-color01;
-  background-image: linear-gradient(to right, $glb-brand-color01, $glb-brand-color01-deg);
-  top: 0px;
-  left: 0px;
-}
-
-/* 
-#section-2 {
-  z-index: 81;
-  background-color: $glb-brand-color01;
-  background-image: linear-gradient(to right, $glb-brand-color01, $glb-brand-color01-deg);
-  //background: url("../img/multimedia.jpg");
-  background: $glb-color-overlay-brand-1 url("../img/multimedia.jpg");
-  background-blend-mode: overlay;
-  background-size: cover;
-  top: 0px;
-  left: 0px;
-  background-repeat: no-repeat;
-  background-position: center center;
-}
- */
-
 #section-1 {
   z-index: 82;
+  background-color: $glb-brand-color01;
+  background-image: linear-gradient(to right, $glb-brand-color01, $glb-brand-color01-deg);
+  top: 0px;
+  left: 0px;
+}
+
+#section-2 {
+  z-index: 81;
   background-color: $glb-brand-color01;
   background-image: linear-gradient(to right, $glb-brand-color01, $glb-brand-color01-deg);
   top: 0px;
@@ -111,7 +95,8 @@ main {
 #section-nav {
   position: absolute;
   z-index: 88;
-  background-color: rgb(255, 255, 255, 0.3);
+  background-color: rgb(255, 255, 255, 0.5);
+  //background-color: $glb-color-opacity-brand-2;
   color: black;
   top: -60px;
   //top: 0px;
@@ -132,7 +117,7 @@ main {
   justify-content: center;
   align-items: center;
   color: transparent;
-  border: 0px solid $glb-brand-color-analogo-oscuro-2;
+  border: 0px solid #fff;
 }
 
 .txt-servicios {
