--- a/scss/_menu_botones.scss
+++ b/scss/_menu_botones.scss
@@ -54,7 +54,8 @@
   content: "";
   -webkit-transition: all 0.35s ease;
   transition: all 0.35s ease;
-  background-color: #9b59b6;
+  //background-color: #9b59b6;
+  background-color: $glb-brand-color-analogo-oscuro-2;
   width: 0;
 }
 .nav-menu-1 a:before {
@@ -74,8 +75,4 @@
 .nav-menu-1 a:hover:after,
 .nav-menu-1 .current a:after {
   width: 100%;
-}
-/* Demo purposes only */
-body {
-  background-color: #212121;
 }
